# cognitive-coding-agent

./: .env.example  .gitignore  LICENSE  README.md  README_EN.md  docker-compose.yml  memory.db-shm  memory.db-wal  prompt.md  pyproject.toml
coding_agents/: __init__.py
coding_agents/api/: __init__.py  main.py
coding_agents/api/routes/: __init__.py  chat.py  health.py  ingest.py  memory.py
coding_agents/api/schemas/: __init__.py  models.py
coding_agents/cli/: __init__.py  main.py  repl.py
coding_agents/context/: __init__.py  builder.py
coding_agents/core/: __init__.py  engine.py
coding_agents/core/actions/: __init__.py  base.py  execute_command.py  list_directory.py  read_file.py  registry.py  search_code.py  write_file.py
coding_agents/core/agents/: __init__.py  analyzer.py  base.py  coder.py  debugger.py  dispatcher.py  executor.py  messages.py  orchestrator.py  planner.py  researcher.py  reviewer.py  tester.py
coding_agents/llm/: __init__.py  client.py
coding_agents/memory/: __init__.py  base.py  embedding.py  factory.py  manager.py
cognitive_coding_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py
tests/properties/: test_embedding.py  test_memory_item.py  test_scoring.py
tests/unit/: __init__.py  test_context_builder.py  test_dispatcher.py  test_engine.py  test_episodic_memory.py  test_llm_client.py  test_memory_manager.py  test_messages.py  test_orchestrator.py  test_perceptual_memory.py  test_rag_document.py  test_rag_pipeline.py  test_semantic_memory.py  test_working_memory.py
(+30 files in other folders)
