[project]
name = "cognitive-coding-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "qdrant-client>=1.9.0",
    "neo4j>=5.20.0",
    "aiosqlite>=0.20.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "tiktoken>=0.7.0",
    "pyyaml>=6.0.0",
    "openai>=1.30.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.1.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.100.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring Docker services",
]
